@@ -48,7 +48,7 @@ library(R2MLwiN)
 ## Read alevchem data
 data(alevchem, package = "R2MLwiN")
 
-alevchem$gcseav <- double2singlePrecision(alevchem$gcse_tot/alevchem$gcse_no - 6)
+alevchem$gcseav <- alevchem$gcse_tot/alevchem$gcse_no - 6
 # Avoids warning when fitting factor as continuous response:
 alevchem$a_point_num <- as.numeric(alevchem$a_point)
 
